--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="navigation">
         <div class="nav-center container d-flex">
-        <a href="/" class="logo"><h1>Beta Moj</h1></a>
+        <a href="index.html" class="logo"><h1>Beta Moj</h1></a>
 
           <ul class="nav-list d-flex">
             <li class="nav-item">
@@ -169,7 +169,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="productDetails.html">Quis Nostrud Exercitation</a>
-            <h4>$700</h4>
+            <h4>Rs.700</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -188,7 +188,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Sonata White Men’s Shirt</a>
-            <h4>$800</h4>
+            <h4>Rs.800</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -205,7 +205,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Concepts Solid Pink Men’s Polo</a>
-            <h4>$150</h4>
+            <h4>Rs.150</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -223,7 +223,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Edor do eiusmod tempor</a>
-            <h4>$900</h4>
+            <h4>Rs.900</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -240,7 +240,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Edor do eiusmod tempor</a>
-            <h4>$100</h4>
+            <h4>Rs.100</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -257,7 +257,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Edor do eiusmod tempor</a>
-            <h4>$500</h4>
+            <h4>Rs.500</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -275,7 +275,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Edor do eiusmod tempor</a>
-            <h4>$200</h4>
+            <h4>Rs.200</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -292,7 +292,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Edor do eiusmod tempor</a>
-            <h4>$560</h4>
+            <h4>Rs.560</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -340,7 +340,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Quis Nostrud Exercitation</a>
-            <h4>$700</h4>
+            <h4>Rs.700</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -358,7 +358,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Sonata White Men’s Shirt</a>
-            <h4>$800</h4>
+            <h4>Rs.800</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -376,7 +376,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Concepts Solid Pink Men’s Polo</a>
-            <h4>$150</h4>
+            <h4>Rs.150</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -393,7 +393,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Edor do eiusmod tempor</a>
-            <h4>$900</h4>
+            <h4>Rs.900</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
