--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@
     <!-- Navigation -->
     <div class="top-nav">
       <div class="container d-flex">
-        <p>Order Online Or Call Us: (001) 2222-55555</p>
+        <p>Order Online Or Call Us: Available Soon</p>
         <ul class="d-flex">
           <li><a href="#">About Us</a></li>
           <li><a href="#">FAQ</a></li>
@@ -27,11 +27,11 @@
     </div>
     <div class="navigation">
       <div class="nav-center container d-flex">
-        <a href="index.html" class="logo"><h1>Dans</h1></a>
+        <a href="index.html" class="logo"><h1>Beta moj</h1></a>
 
         <ul class="nav-list d-flex">
           <li class="nav-item">
-            <a href="/" class="nav-link">Home</a>
+            <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
             <a href="product.html" class="nav-link">Shop</a>
@@ -112,7 +112,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="productDetails.html">Concepts Solid Pink Men’s Polo</a>
-            <h4>$150</h4>
+            <h4>Rs.150</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -130,7 +130,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Concepts Solid Pink Men’s Polo</a>
-            <h4>$150</h4>
+            <h4>Rs.150</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -148,7 +148,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Concepts Solid Pink Men’s Polo</a>
-            <h4>$150</h4>
+            <h4>Rs.150</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -165,7 +165,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Concepts Solid Pink Men’s Polo</a>
-            <h4>$150</h4>
+            <h4>Rs.150</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -183,7 +183,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Concepts Solid Pink Men’s Polo</a>
-            <h4>$150</h4>
+            <h4>Rs.150</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -200,7 +200,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Concepts Solid Pink Men’s Polo</a>
-            <h4>$150</h4>
+            <h4>Rs.150</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -218,7 +218,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Concepts Solid Pink Men’s Polo</a>
-            <h4>$150</h4>
+            <h4>Rs.150</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -235,7 +235,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Concepts Solid Pink Men’s Polo</a>
-            <h4>$150</h4>
+            <h4>Rs.150</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
