--- a/productDetails.html
+++ b/productDetails.html
@@ -10,14 +10,14 @@
     />
     <!-- Custom StyleSheet -->
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Boy’s T-Shirt - Codevo</title>
+    <title>Boy’s T-Shirt</title>
   </head>
 
   <body>
     <!-- Navigation -->
     <div class="top-nav">
       <div class="container d-flex">
-        <p>Order Online Or Call Us: (001) 2222-55555</p>
+        <p>Order Online Or Call Us: Available Soon</p>
         <ul class="d-flex">
           <li><a href="#">About Us</a></li>
           <li><a href="#">FAQ</a></li>
@@ -27,11 +27,11 @@
     </div>
     <div class="navigation">
       <div class="nav-center container d-flex">
-        <a href="index.html" class="logo"><h1>Dans</h1></a>
+        <a href="index.html" class="logo"><h1>Beta Moj</h1></a>
 
         <ul class="nav-list d-flex">
           <li class="nav-item">
-            <a href="/" class="nav-link">Home</a>
+            <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
             <a href="product.html" class="nav-link">Shop</a>
@@ -97,7 +97,7 @@
         <div class="right">
           <span>Home/T-shirt</span>
           <h1>Boy’s T-Shirt By Handsome</h1>
-          <div class="price">$50</div>
+          <div class="price">Rs.50</div>
           <form>
             <div>
               <select>
@@ -142,7 +142,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Concepts Solid Pink Men’s Polo</a>
-            <h4>$150</h4>
+            <h4>Rs.150</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -160,7 +160,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Concepts Solid Pink Men’s Polo</a>
-            <h4>$150</h4>
+            <h4>Rs.150</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -177,7 +177,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Concepts Solid Pink Men’s Polo</a>
-            <h4>$150</h4>
+            <h4>Rs.150</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -195,7 +195,7 @@
           <div class="product-info">
             <span>MEN'S CLOTHES</span>
             <a href="">Concepts Solid Pink Men’s Polo</a>
-            <h4>$150</h4>
+            <h4>Rs.150</h4>
           </div>
           <ul class="icons">
             <li><i class="bx bx-heart"></i></li>
@@ -240,9 +240,9 @@
     ></script>
     <script src="./js/zoomsl.min.js"></script>
     <script>
-      $(function () {
+      Rs.(function () {
         console.log("hello");
-        $("#zoom").imagezoomsl({
+        Rs.("#zoom").imagezoomsl({
           zoomrange: [4, 4],
         });
       });
