--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
     <!-- Navigation -->
     <div class="top-nav">
       <div class="container d-flex">
-        <p>Order Online Or Call Us: (001) 2222-55555</p>
+        <p>Order Online Or Call Us: Available Soon</p>
         <ul class="d-flex">
           <li><a href="#">About Us</a></li>
           <li><a href="#">FAQ</a></li>
@@ -26,11 +26,11 @@
     </div>
     <div class="navigation">
       <div class="nav-center container d-flex">
-        <a href="index.html" class="logo"><h1>Dans</h1></a>
+        <a href="index.html" class="logo"><h1>Beta Moj</h1></a>
 
         <ul class="nav-list d-flex">
           <li class="nav-item">
-            <a href="/" class="nav-link">Home</a>
+            <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
             <a href="product.html" class="nav-link">Shop</a>
