--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.theme.css">
     <!-- Custom StyleSheet -->
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Beta Moj Kardi</title>
+    <title>We Don't care for you</title>
   </head>
   <body>
     <!-- Header -->
@@ -33,7 +33,7 @@
       </div>
       <div class="navigation">
         <div class="nav-center container d-flex">
-        <a href="index.html" class="logo"><h1>Beta Moj</h1></a>
+        <a href="index.html" class="logo"><h1>Hustle Deal</h1></a>
 
           <ul class="nav-list d-flex">
             <li class="nav-item">
