--- a/productDetails.html
+++ b/productDetails.html
@@ -27,7 +27,7 @@
     </div>
     <div class="navigation">
       <div class="nav-center container d-flex">
-        <a href="index.html" class="logo"><h1>Beta Moj</h1></a>
+        <a href="index.html" class="logo"><h1>Hustle Deal</h1></a>
 
         <ul class="nav-list d-flex">
           <li class="nav-item">
